<resources>
    <string name="app_name">Speedometer</string>
    <string name="total_distance">Total Distance:</string>
    <string name="speed">Speed:</string>
    <string name="start_calculating">Start Calculating</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="total_time">Total Time:</string>
    <string name="resume">Resume</string>
</resources>
