<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/back"
    android:orientation="vertical">


    <TextView
        android:id="@+id/distancetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"

        android:gravity="center"
        android:text="@string/total_distance"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/speedtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="monospace"

        android:gravity="center"
        android:text="@string/speed"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:fontFamily="monospace"

        android:gravity="center"
        android:text="@string/total_time"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="#00A86B"
            android:fontFamily="serif-monospace"
            android:paddingBottom="0dp"
            android:text="@string/start_calculating"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/pause"
            android:background="#00A86B"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:fontFamily="serif-monospace"
            android:text="@string/pause"
            android:visibility="gone"
            android:textSize="20sp" />

        <Button
            android:background="#00A86B"
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:fontFamily="serif-monospace"
            android:text="@string/stop"
            android:visibility="gone"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>
